--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
 }
+
 a {
     text-decoration: none;
     color: white;
@@ -14,7 +15,6 @@ nav {
 
 .nav-btn {
     padding: 15px 20px;
-    
 }
 
 .sub-nav-content {
@@ -27,9 +27,9 @@ nav {
     padding: 15px 20px;
 }
 
-.sub-nav:hover .sub-nav-content a { 
+.sub-nav:hover .sub-nav-content a {
     display: block;
-    background-color: blue;
+    background-color: #2688cd;
 }
 
 /* need to move arrow to the top */
@@ -40,7 +40,7 @@ nav {
     margin-left: 5px;
 }
 
- 
+
 
 
 /* For Dan */
